:wrench::art: fix overlay image breaking out of container

--- a/sass/partials/_schedule-more-info.scss
+++ b/sass/partials/_schedule-more-info.scss
@@ -10,6 +10,10 @@
   display: none;
 }
 
+.slot-info__image {
+  max-width: 100%;
+}
+
 .slot-info__meta {
   padding: 15px;
   @include clearfix;
